--- a/custom_components/dynamic_energy_calculator/translations/en.json
+++ b/custom_components/dynamic_energy_calculator/translations/en.json
@@ -66,4 +66,18 @@
       }
     }
   }
+  ,"issues": {
+    "missing_price_sensor": {
+      "title": "Missing price sensor",
+      "description": "A price sensor is required for calculating energy costs."
+    },
+    "energy_source_unavailable": {
+      "title": "Energy source unavailable",
+      "description": "Energy sensor {sensor} is unavailable or has invalid data."
+    },
+    "price_sensor_unavailable": {
+      "title": "Price sensor unavailable",
+      "description": "Price sensor {sensor} is unavailable or has invalid data."
+    }
+  }
 }
