--- a/custom_components/dynamic_energy_calculator/translations/nl.json
+++ b/custom_components/dynamic_energy_calculator/translations/nl.json
@@ -66,4 +66,18 @@
       }
     }
   }
+  ,"issues": {
+    "missing_price_sensor": {
+      "title": "Ontbrekende prijssensor",
+      "description": "Er is een prijssensor nodig om kosten te berekenen."
+    },
+    "energy_source_unavailable": {
+      "title": "Energiebron niet beschikbaar",
+      "description": "Energiebron {sensor} is niet beschikbaar of ongeldig."
+    },
+    "price_sensor_unavailable": {
+      "title": "Prijssensor niet beschikbaar",
+      "description": "Prijssensor {sensor} is niet beschikbaar of ongeldig."
+    }
+  }
 }
