--- a/custom_components/dynamic_energy_contract_calculator/translations/nl.json
+++ b/custom_components/dynamic_energy_contract_calculator/translations/nl.json
@@ -18,17 +18,18 @@
         "data": {
           "price_sensor": "Stroomprijssensor",
           "price_sensor_gas": "Gasprijssensor",
-          "electricity_consumption_markup_per_kwh": "Opslag stroomverbruik per kWh",
-          "electricity_production_markup_per_kwh": "Opslag stroomproductie per kWh",
+          "per_unit_supplier_electricity_markup": "Opslag elektriciteit per kWh",
+          "per_unit_supplier_electricity_production_markup": "Opslag stroomproductie per kWh",
           "production_price_include_vat": "BTW toepassen op terugleverprijs",
-          "electricity_surcharge_per_kwh": "Toeslag elektriciteit per kWh",
+          "per_unit_government_electricity_tax": "Belasting elektriciteit per kWh",
           "vat_percentage": "BTW-percentage",
-          "electricity_surcharge_per_day": "Elektriciteitstoeslag per dag",
-          "electricity_standing_charge_per_day": "Vaste kosten elektriciteit per dag",
-          "electricity_tax_rebate_per_day": "Belastingteruggave elektriciteit per dag",
-          "gas_markup_per_m3": "Gasopslag per m³",
-          "gas_surcharge_per_m3": "Gastoelslag per m³",
-          "gas_standing_charge_per_day": "Vaste kosten gas per dag"
+          "per_day_grid_operator_electricity_connection_fee": "Aansluitkosten elektriciteit per dag",
+          "per_day_supplier_electricity_standing_charge": "Vaste kosten elektriciteit per dag",
+          "per_day_government_electricity_tax_rebate": "Belastingteruggave elektriciteit per dag",
+          "per_unit_supplier_gas_markup": "Gasopslag per m³",
+          "per_unit_government_gas_tax": "Belasting gas per m³",
+          "per_day_grid_operator_gas_connection_fee": "Aansluitkosten gas per dag",
+          "per_day_supplier_gas_standing_charge": "Vaste kosten gas per dag"
         }
       }
     },
@@ -55,17 +56,18 @@
         "data": {
           "price_sensor": "Stroomprijssensor",
           "price_sensor_gas": "Gasprijssensor",
-          "electricity_consumption_markup_per_kwh": "Opslag stroomverbruik per kWh",
-          "electricity_production_markup_per_kwh": "Opslag stroomproductie per kWh",
+          "per_unit_supplier_electricity_markup": "Opslag elektriciteit per kWh",
+          "per_unit_supplier_electricity_production_markup": "Opslag stroomproductie per kWh",
           "production_price_include_vat": "BTW toepassen op terugleverprijs",
-          "electricity_surcharge_per_kwh": "Toeslag elektriciteit per kWh",
+          "per_unit_government_electricity_tax": "Belasting elektriciteit per kWh",
           "vat_percentage": "BTW-percentage",
-          "electricity_surcharge_per_day": "Elektriciteitstoeslag per dag",
-          "electricity_standing_charge_per_day": "Vaste kosten elektriciteit per dag",
-          "electricity_tax_rebate_per_day": "Belastingteruggave elektriciteit per dag",
-          "gas_markup_per_m3": "Gasopslag per m³",
-          "gas_surcharge_per_m3": "Gastoelslag per m³",
-          "gas_standing_charge_per_day": "Vaste kosten gas per dag"
+          "per_day_grid_operator_electricity_connection_fee": "Aansluitkosten elektriciteit per dag",
+          "per_day_supplier_electricity_standing_charge": "Vaste kosten elektriciteit per dag",
+          "per_day_government_electricity_tax_rebate": "Belastingteruggave elektriciteit per dag",
+          "per_unit_supplier_gas_markup": "Gasopslag per m³",
+          "per_unit_government_gas_tax": "Belasting gas per m³",
+          "per_day_grid_operator_gas_connection_fee": "Aansluitkosten gas per dag",
+          "per_day_supplier_gas_standing_charge": "Vaste kosten gas per dag"
         }
       }
     },
