--- a/custom_components/dynamic_energy_contract_calculator/translations/nl.json
+++ b/custom_components/dynamic_energy_contract_calculator/translations/nl.json
@@ -21,7 +21,7 @@
           "per_unit_supplier_electricity_markup": "Opslag elektriciteit per kWh",
           "per_unit_supplier_electricity_production_markup": "Opslag stroomproductie per kWh",
           "production_price_include_vat": "BTW toepassen op terugleverprijs",
-          "saldering_enabled": "Salderingsregeling inschakelen",
+          "netting_enabled": "Salderingsregeling inschakelen",
           "per_unit_government_electricity_tax": "Belasting elektriciteit per kWh",
           "vat_percentage": "BTW-percentage",
           "per_day_grid_operator_electricity_connection_fee": "Aansluitkosten elektriciteit per dag",
@@ -60,7 +60,7 @@
           "per_unit_supplier_electricity_markup": "Opslag elektriciteit per kWh",
           "per_unit_supplier_electricity_production_markup": "Opslag stroomproductie per kWh",
           "production_price_include_vat": "BTW toepassen op terugleverprijs",
-          "saldering_enabled": "Salderingsregeling inschakelen",
+          "netting_enabled": "Salderingsregeling inschakelen",
           "per_unit_government_electricity_tax": "Belasting elektriciteit per kWh",
           "vat_percentage": "BTW-percentage",
           "per_day_grid_operator_electricity_connection_fee": "Aansluitkosten elektriciteit per dag",
